# tree-sitter-query-macro

./: Cargo.toml  LICENSE  README.md
benchmark/: Cargo.toml  Test.java
benchmark/benches/: macro.rs
benchmark/src/: main.rs
src/: lib.rs
