[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "macro"
harness = false

[dependencies]
tree-sitter-query-macro = { path = ".."}
lazy_static = "1.4.0"
tree-sitter = "0.19.0"
tree-sitter-java="0.19.0"
